--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "dmcmarkdown"]
-	path = dmcmarkdown
-	url = git@github.com:dh3968mlq/dmcmarkdown.git
-
 [submodule "markdown2dash"]
 	path = markdown2dash
-	url = git@github.com:dh3968mlq/markdown2dash.git
+	url = https://github.com/dh3968mlq/markdown2dash.git
